@@ -21,6 +21,11 @@
 	
 	-->
 	
+	<!-- empty to take the default in MmiOrr class. Under the development machine I use:
+	   -Dmmiorr.host=http://localhost:8080
+	 -->
+	<property name="mmiorr.host" value=""/>
+	
 	<property name="ontologyUri" value="http://example.org/test1"/>
 	
 	<property name="file" value="resource/test1.owl"/>
@@ -57,8 +62,10 @@
 	  <target name="registrationTests" depends="loginInfo,compile"
 	  	   description="Registration operations; username/password required">
 	  	<junit printsummary="yes" haltonfailure="yes" fork="yes">
+	  	  <jvmarg value="-Dmmiorr.host=${mmiorr.host}"/>
 	  	  <jvmarg value="-Dusername=${username}"/>
 	  	  <jvmarg value="-Dpassword=${password}"/>
+	  	  <jvmarg value="-DgraphId=${graphId}"/>
 	  	  <formatter type="plain" usefile="no" />
 	  	  <classpath refid="project.class.path"/>
 	  	  <test name="org.mmisw.mmiorr.client.test.RegistrationTest"/>
@@ -67,6 +74,7 @@
 
 	  <target name="retrievalTests" depends="compile">
 	  	<junit printsummary="yes" haltonfailure="yes" fork="yes">
+	  	  <jvmarg value="-Dmmiorr.host=${mmiorr.host}"/>
 	  	  <formatter type="plain" usefile="no" />
 	  	  <classpath refid="project.class.path"/>
 	  	  <test name="org.mmisw.mmiorr.client.test.RetrievalTest"/>
@@ -76,6 +84,7 @@
 	  <target name="updateTests" depends="loginInfo,compile"
 	  	   description="Update; username/password required">
 	  	<junit printsummary="yes" haltonfailure="yes" fork="yes">
+		  <jvmarg value="-Dmmiorr.host=${mmiorr.host}"/>
 	  	  <jvmarg value="-Dusername=${username}"/>
 	  	  <jvmarg value="-Dpassword=${password}"/>
 	  	  <formatter type="plain" usefile="no" />
@@ -86,6 +95,7 @@
 
 	  <target name="queryTests" depends="compile">
 	  	<junit printsummary="yes" haltonfailure="yes" fork="yes">
+	  	  <jvmarg value="-Dmmiorr.host=${mmiorr.host}"/>
 	  	  <formatter type="plain" usefile="no" />
 	  	  <classpath refid="project.class.path"/>
 	  	  <test name="org.mmisw.mmiorr.client.test.QueryTest"/>
@@ -100,6 +110,7 @@
 	
 	  <target name="register" depends="compile,loginInfo">
 	    <java classname="org.mmisw.mmiorr.client.RegisterOntology">
+	     <jvmarg value="-Dmmiorr.host=${mmiorr.host}"/>
 	     <classpath refid="project.class.path"/>
 	    	<arg value="${username}"/>
 	    	<arg value="${password}"/>
@@ -111,6 +122,7 @@
 
 	  <target name="retrieve" depends="compile" description="retrieves latest version">
 	    <java classname="org.mmisw.mmiorr.client.RetrieveOntology">
+	     <jvmarg value="-Dmmiorr.host=${mmiorr.host}"/>
 	     <classpath refid="project.class.path"/>
 	    	<arg value="${ontologyUri}"/>
 	    	<arg value="${format}"/>
@@ -120,6 +132,7 @@
 	  <target name="retrieveVersion" depends="compile" description="retrieves a given version">
 	  	<fail unless="version" message="version argument is missing.  Use -Dversion=desiredVersion"/>
 	    <java classname="org.mmisw.mmiorr.client.RetrieveOntology">
+	     <jvmarg value="-Dmmiorr.host=${mmiorr.host}"/>
 	     <classpath refid="project.class.path"/>
 	    	<arg value="${ontologyUri}"/>
 	    	<arg value="${format}"/>
