@@ -2,6 +2,18 @@ org.mmisw.mmiorr.client
 Carlos Rueda  -  MBARI
 November 2009
 
+2009-12-28
+	- The graphId can now be passed for the registrationTests, for example: -DgraphId=MyGraphID 
+	  This facilitates the testing of the named graph capability that it's being enabled in the repository. 
+	  For example:
+	    ant -Dusername=uuu -Dpassword=xxx -DgraphId=MyGraphID registrationTests
+	 
+	- System property "mmiorr.host" can now be passed to specify the MMI ORR deployment to be
+	  used/tested. This facilitates testing against my localhost deployment of the ORR.
+	  By default, this value is "http://mmisw.org", so usual behavior hasn't been changed.
+	  Under my local deployment of the ORR, I run for example:
+	     ant -Dmmiorr.host=http://localhost:8080 -Dusername=carueda -Dpassword=xxx registrationTests
+	
 2009-11-22
 	- re-organized tests mainly to separate registration tests from the retrieval/comparison tests.
 	- completed CIDEVDM-30 test, http://ci.oceanobservatories.org/tasks/browse/CIDEVDM-30
